--- a/LiebreTortuga/LiebreTortuga/Views/Home/Index.cshtml
+++ b/LiebreTortuga/LiebreTortuga/Views/Home/Index.cshtml
@@ -3,29 +3,38 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Examén Lasec</h1>
+    <h2>Fabula la liebre y la tortuga</h2>
+    <p class="lead">
+        Una vez, una Liebre, se burlaba de las patas cortas y de la lentitud al caminar de una Tortuga,
+        sin embargo, esta no se quedo callada, y se defendió lanzando una risa, y dijo a la Liebre:
+    </p>
+    <p class="lead">
+        "Puede que seas muy veloz amiga Liebre, pero, estoy más que segura poderte ganar una carrera."
+    </p>
+    <p class="lead">
+        La Liebre, sorprendida por tal decir, aceptó el reto sin pensarlo dos veces, ya que ella,
+        estaba muy segura de que ganaría a la Tortuga a ojos cerrados. Entonces, ambos propusieron
+        a la Zorra, que señale el camino y la meta. Días después, llegó el esperado momento de la carrera,
+        y al sonar la cuenta de tres, inició la carrera de estos dos contendientes.
+    </p>
+    <p class="lead">
+        La Tortuga no dejaba de
+        caminar y caminar, pero a su lento paso, avanzaba tranquila hacia la meta. En cambio la Liebre, corrió
+        tan rápido que dejó muy atrás a la Tortuga. Al voltearse y ya no ver a la Tortuga, la Liebre vio segura
+        su éxito sobre la carrera, y deicidio echarse una siesta. Poco después, la Liebre despertó y vio si por
+        atrás seguía sin llegar la Tortuga, pero al ver hacia la meta, vio a la Tortuga muy cerca de la Final,
+        y en un intento desesperado por correr lo más veloz que pudo, la Tortuga llegó y ganó.
+
+
+    </p>
+    <div class="container">
+        
+        <p class="col-lg-8"><a href="@Url.Action("Fabula", "Home")" class="btn btn-primary btn-lg">Comenzar carrera &raquo;</a></p>
+        <img src="~/Images/fab.jpg" class="img-rounded col-lg-4" width="200" />
+    </div>
+    
+
+    
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
