--- a/LiebreTortuga/LiebreTortuga/Views/Home/Index.cshtml
+++ b/LiebreTortuga/LiebreTortuga/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <div class="jumbotron">
     <h1>Examén Lasec</h1>
-    <h2>Fabula la liebre y la tortuga</h2>
+    <h2>Fábula la liebre y la tortuga</h2>
     <p class="lead">
         Una vez, una Liebre, se burlaba de las patas cortas y de la lentitud al caminar de una Tortuga,
-        sin embargo, esta no se quedo callada, y se defendió lanzando una risa, y dijo a la Liebre:
+        sin embargo, ésta no se quedo callada, y se defendió lanzando una risa, y dijo a la Liebre:
     </p>
     <p class="lead">
         "Puede que seas muy veloz amiga Liebre, pero, estoy más que segura poderte ganar una carrera."
