--- a/LiebreTortuga/LiebreTortuga/Views/Shared/_Layout.cshtml
+++ b/LiebreTortuga/LiebreTortuga/Views/Shared/_Layout.cshtml
@@ -17,14 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Implementación de fabula", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Implementación de fábula", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Fabula", "Fabula", "Home")</li>
+                    <li>@Html.ActionLink("Fábula", "Fabula", "Home")</li>
                 </ul>
             </div>
         </div>
